Add metadata and social preview image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will you marry me?</title>
+
+    <!-- 
+        ========================================
+        Coded with ❤️ by Rafid Rohan
+        GitHub: https://github.com/RafidRohan
+        ======================================== 
+    -->
+
+    <!-- Metadata for Authorship -->
+    <meta name="author" content="Rafid Rohan">
+    <meta name="copyright" content="Rafid Rohan">
+    <meta name="application-name" content="Can't Say No">
+
+    <!-- Open Graph Data (Controls how the link looks when shared on WhatsApp/iMessage) -->
+    <meta property="og:title" content="I have a question for you... 💌">
+    <meta property="og:description" content="Click to see a very important question. (Warning: The answer is locked!)">
+    <meta property="og:image" content="https://check-this-out-now.pages.dev/assets/secret-preview.gif">
+    <meta property="og:url" content="https://check-this-out-now.pages.dev/">
+    <meta property="og:type" content="website">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Nunito:wght@400;700&display=swap"
         rel="stylesheet">
