Add GitHub profile button to footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Open Graph Data (Controls how the link looks when shared on WhatsApp/iMessage) -->
     <meta property="og:title" content="I have a question for you... 💌">
     <meta property="og:description" content="Click to see a very important question. (Warning: The answer is locked!)">
-    <meta property="og:image" content="https://check-this-out-now.pages.dev/assets/secret-preview.gif">
+    <meta property="og:image" content="assets/secret-preview.gif">
     <meta property="og:url" content="https://check-this-out-now.pages.dev/">
     <meta property="og:type" content="website">
     <script src="https://cdn.tailwindcss.com"></script>
