--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <!-- GitHub Footer Button -->
     <a href="https://github.com/RafidRohan/" target="_blank" rel="noopener noreferrer"
-        class="absolute bottom-4 text-pink-300 hover:text-pink-500 transition-colors duration-300 z-50 animate-bounce">
+        class="fixed bottom-4 text-pink-300 hover:text-pink-500 transition-colors duration-300 z-50 animate-bounce">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
             class="w-8 h-8">
             <path
